# emergencia

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: fase2_correcoes.md
.claude/commands/: game-art.md  run.md
game/: main.py  save.py  settings.py
game/abm/: village.py  villager.py
game/entities/: player.py
game/ui/: hud.py  minimap.py
game/world/: distributions.py  layout.py  map.py  time_system.py
map/: 01_village.tmx  emergencia_v0.tiled-session  watergrass.tsx
saves/: save.json
