[project]
name = "emergencia"
version = "0.1.0"
description = "Jogo de simulação de agentes em cidade pequena do Brasil"
authors = [
    {name = "nath",email = "nfamartins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.1 || >3.14.1,<4.0"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "mesa (>=3.5.1,<4.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
